fix(review): prend en compte remarques de relecture
modifie le projet pour fonctionnement `mvn install`

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <modules>
         <module>owasp-jersey</module>
-        <module>hackertools</module>
+        <!--<module>hackertools</module>-->
         <!--<module>integration</module>-->
     </modules>
 
